fixed about pg alignment

--- a/css/html-style.css
+++ b/css/html-style.css
@@ -57,6 +57,7 @@
      
     .row {
         margin: 0;
+        width: 100%;
     }
     
     #wrapper {        
@@ -219,9 +220,11 @@
          width: 100%;
     }
      
-    .btn-group.btn-group-toggle {
-        zoom: 0.6 !important;
+    .btn-group {
         width: 100%;
+        position: relative;
+        transform-origin: 0;
+        transform: scale(0.6);
     }
 
     .btn-rounded {        
@@ -237,7 +240,7 @@
     }        
             
     .searchbox {        
-        width: 85.5%;        
+        width: 85%;        
         height: 40px;        
         margin-bottom: 7px;
         align-content: center;       
@@ -324,12 +327,10 @@
     }
 
     section.flex3-item1-1 {
-        width:100%;
         text-align: center;
     }
 
-
-    section.flex3-item-1 p{
+    section.flex3-item-1 p {
         width: 100%;
     }
 
@@ -585,21 +586,21 @@
         margin-top: 30px;
         margin-bottom: 30px;
         width: 100%;
-        margin-left: 40%;
+        margin-left: 0;
     }
 
     .flex-item-5 {
         margin-top: 30px;
         margin-bottom: 30px;
         width: 100%;
-        margin-left: 40%;
+        margin-left: 0;
     }
 
     .flex-item-6 {
         margin-top: 30px;
         margin-bottom: 30px;
         width: 100%;
-        margin-left: 40%;
+        margin-left: 0;
     }
 }
 
@@ -658,8 +659,11 @@
         width: 100%;
     }
 
-    .btn-group.btn-group-toggle {
-        zoom: 1 !important;
+    .btn-group {
+        width: 100%;
+        position: relative;
+        transform-origin: 0;
+        transform: scale(1);
     }
 
     .btn-rounded {
@@ -675,7 +679,7 @@
     }        
             
     .searchbox {        
-        width: 92%;        
+        width: 90%;        
         height: 40px;        
         margin-bottom: 7px;      
         border-color: #475a7b;        
@@ -806,24 +810,26 @@
     }
     
     /*<-------------------------About Page-------------------------------------->*/
+
+
     .flex-item-4 {
-        padding: 5em;
         padding-bottom: 0;
-        margin-left: 25%;
+        margin-left: 0;
+        width: 100%;
     }
 
     .flex-item-5 {
-        padding: 5em;
         padding-top: 0;
         padding-bottom: 0;
-        margin-left: 25%;
+        margin-left: 0;
+        width: 100%;
     }
 
     .flex-item-6 {
-        padding: 5em;
         padding-top: 0;
         padding-bottom: 0;
-        margin-left: 25%;
+        margin-left: 0;
+        width: 100%;
     }
 
     #list {
@@ -878,7 +884,7 @@
     }        
             
     .searchbox {        
-        width: 90.5%;        
+        width: 88%;        
         height: 40px;        
         margin-bottom: 7px;        
         border-color: #475a7b;        
